Seção Ofertas iniciada

--- a/src/components/carousel/style.css
+++ b/src/components/carousel/style.css
@@ -8,6 +8,6 @@
     height: 450px; /* Ajuste a altura conforme necessário */
 }
 .swiper-pagination-bullet{
-    background-color: #CCC;
+    background-color: #312f2f;
     margin-bottom: 15px !important;
 }
