Seçào do Camisas iniciada

--- a/src/App.css
+++ b/src/App.css
@@ -13,11 +13,10 @@ main{
  flex-direction: column;
 }
 ::-webkit-scrollbar {
-  width: 0;
-  background-color: #000;
+  background-color: #f1f1f1;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #DC0000;
   border-radius: 2px;
+  border-color: #000;
 }
